--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 19 21:10:23 CST 2018
+#Tue Dec 11 10:53:20 CST 2018
+ndk.dir=D\:\\Android\\sdk\\ndk-bundle
 sdk.dir=D\:\\Android\\sdk
