--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="true"
-      android:hardwareAccelerated="false"
+      android:hardwareAccelerated="true"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
