--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,8 +95,8 @@ android {
         applicationId "me.ursb.twolife"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 18
-        versionName "2.1.13"
+        versionCode 19
+        versionName "2.2.1"
         manifestPlaceholders = [
                 JPUSH_APPKEY: "67fdf21f35e554cc0b985e4e",
                 APP_CHANNEL : "default"
@@ -197,6 +197,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.facebook.fresco:fresco:1.3.0'
+    compile 'com.facebook.fresco:animated-gif:1.3.0'
     //compile project(':react-native-extra-dimensions-android')
 }
 
